<resources>
    <string name="app_name">iText</string>
    <string name="title_ruby">iText</string>
    <string name="form_btn_mas_tarde">Mas Tarde</string>
    <string name="form_btn_ingresar">Ingresar</string>
    <string name="form_btn_crear_cuenta">Crear Cuenta</string>
    <string name="login_valido">Daniel</string>
    <string name="clave_valida">1234</string>
    <string name="error_autenticar">usuario o password incorrectos</string>
    <string name="datos_guardados_correctamente">"Los datos se guardaron con exito "</string>
    <string name="btn_create_guardar">Guardar</string>
    <string name="btn_create_cancelar">Cancelar</string>
    <string name="title_login">Login</string>
    <string name="title_create_login_registro">Registro</string>
    <string name="usuario_create_login_registro">Usuario</string>
    <string name="pass_create_login_registro">Contraseña</string>
    <string name="correo_create_login_registro">Correo</string>
    <string name="modules">Módulos</string>
    <string name="tab_informacon">Información</string>
    <string name="tab_video">Vídeo</string>
    <string name="tab_examen">Examen</string>
    <string name="escoge_medio_preferencia">Escoge el medio de preferencia :</string>
    <string name="mensaje_bien_venido">Bienvenido :</string>
    <string name="mensaje_ocultar">Ocultar</string>
    <string name="mensaje_ocultar_toast">Ocultado</string>
    <string name="tiulo_progreso_menu_bar">Progreso</string>
    <string name="ayuda_sugerencia_ayuda">Ayuda</string>
    <string name="ayuda_sugerencia_recomendaciones">Recomendaciónes</string>
    <string name="ayuda_sugerencia_recomendaciones_resp">
        -Para un mejor uso de esta app se suguiere estar conectado a una red wifi.\n
        -No conectarse por medio de datos ya que los cargos generados pueden ser grandes.</string>
    <string name="ayuda_sugerencia_sugerencias">Sugerencias</string>
    <string name="ayuda_sugerencia_sugerencias_para">Para :</string>
    <string name="ayuda_sugerencia_sugerencias_correo">adaniel95lira@gmail.com</string>
    <string name="ayuda_sugerencia_sugerencias_tema">Tema :</string>
    <string name="ayuda_sugerencia_sugerencias_mensage">Mensage :</string>
    <string name="ayuda_sugerencia_sugerencias_enviar">Enviar</string>
    <string name="acerca_de_titulo_desarrollador">Desarrollador</string>
    <string name="acerca_de_nom_des">Nombre:</string>
    <string name="acerca_de_nom_des_rep">Angel Daniel Licea Ruiz</string>
    <string name="acerca_de_corr_des">Correo:</string>
    <string name="acerca_de_corr_des_rep">adaniel95lira@gmail.com</string>
    <string name="acerca_de_titulo_asignatura">Asignatura</string>
    <string name="acerca_de_nom_asig">Nombre:</string>
    <string name="acerca_de_nom_asig_res">Desarrollo de aplicaciónes III.</string>
    <string name="acerca_de_prof_asig">Profesor:</string>
    <string name="acerca_de_prof_asig_res">Rodriguez Garcia Anastacio.</string>
    <string name="acerca_de_titulo_universidad">Universidad</string>
    <string name="acerca_de_nombre_uni">Nombre:</string>
    <string name="acerca_de_nombre_uni_res">Universidad Tecnológica del Norte de Guanajuato.</string>
    <string name="acerca_de_ubicacion_uni">Ubicación:</string>
    <string name="acerca_de_ubicacion_uni_res">Dolores Hidalgo, Cuna de la independencia nacional.</string>
    <string name="titulo_calificacion">Calificación</string>
    <string name="calificacion_enviar">Enviar</string>
    <string name="calificacion_resultado">Resultado :</string>
    <string name="titulo_configuracion">Configuraciónes</string>
    <string name="configuracion_titulo_notificaciones">Notificaciónes</string>
    <string name="configuracion_activar_notificaciones">Activar</string>
    <string name="configuracion_desactivar_notificaciones">Desactivar</string>
    <string name="configuracion_titulo_audio">Audio</string>
    <string name="configuracion_titulo_almacenamiento">Almacenamiento</string>
    <string name="configuracion_interno_almacenamiento">Interno</string>
    <string name="configuracion_externo_almacenamiento">Externo</string>
    <string name="nota_tipo_almacenamiento">Nota: El almacenamiento solo se puede eleguir al momento de crear la cuenta</string>
    <string name="usuario_informacion_titulo">Información</string>
    <string name="usuario_informacion_nombre">Nomre: </string>
    <string name="usuario_informacion_nombre_res">Angel Daniel Licea Ruiz</string>
    <string name="usuario_informacion_correo">Correo: </string>
    <string name="usuario_informacion_correo_res">adaniel95lira@gmail.com</string>
    <string name="usuario_informacion_puntos">Puntos: </string>
    <string name="usuario_informacion_puntos_res">123 pt</string>
    <string name="menu_bar_progreso_on">Progreso</string>
    <string name="menu_bar_usuario_on">Información del usuario</string>
    <string name="menu_bar_grafica_on">Gráfica de aprovechamiento</string>
    <string name="menu_bar_configuracion_on">Configuraciónes</string>
    <string name="menu_bar_calificar_app_on">Calificar app</string>
    <string name="menu_bar_acerca_de_on">Acerca de</string>
    <string name="menu_bar_ayuda_sugerencia_on">Ayuda y sugerencias</string>
    <string name="menu_bar_salir_on">Salir</string>
    <string name="menu_bar_juego">Pagina Dinamica</string>
    <string name="menu_bar_juego_memo">Juego</string>
    <string name="menu_bar_acerca_de_off">Acerca de</string>
    <string name="menu_bar_ayuda_sugerencia_off">Ayuda y sugerencias</string>
    <string name="menu_bar_salir_off">Salir</string>
    <string name="confirm_pass_create_login_registro">Confirma la contraseña</string>
    <string name="title_menssage_error_uno">Atención!!</string>
    <string name="title_menssage_error_dos">Atención, campos requeridos!!</string>
    <string name="button_menssage_error">Aceptar</string>
    <string name="menssage_error_pass_different">Las contraseñas no coinsiden</string>
    <string name="cuestionario_comprobar">Comprobar</string>
    <string name="calificaciones_examenes">Calificaciónes de los examenes</string>
    <string name="html_tema_concluido_off">
        <![CDATA[
            <div>
              <div>
                 <p>
                  <font color="#000000">
                     has concluido con exito el tema 1 :<i> Sobre iText</i>. Para poder continuar con el curso te recomendamos que te registres.
                  </font>
                 </p>
              </div>
           </div>
        ]]>
    </string>
     <string name="html_curso_concluido_parte_uno">
        <![CDATA[
                     Has concluido con exito el curso de <i>iText</i> <b>
        ]]>
    </string>
    <string name="html_curso_concluido_parte_dos">
        <![CDATA[
                     </b>. Para poder guardar tu calificación te recomendamos dar clic en el boton de ENVIAR.<br />
        ]]>
    </string>
    <string name="html_uno_sobre_ruby">
        <![CDATA[
            <div>
              <div>
                 <p>
                  En el verano de 1998, la universidad donde trabajaba 1 comenzaba una migración
proyecto con la intención de rediseñar una serie de programas independientes
utilizado por la administración de estudiantes. Hasta ese momento, entrando en los grados de los estudiantes
y el cálculo de sus resultados finales al final del año académico se llevó a cabo
el uso de software que funcionaba sólo en MS-DOS. Los documentos producidos por este software
podría ser impresa en un solo tipo de impresora. Esto no era una forma ideal de
de trabajo, por decir lo menos. Los maestros y personal administrativo se utilizan todos
tipos de sistemas: Windows, Mac, Linux, Solaris, y así sucesivamente. Sin embargo, para una de las
la mayoría de los aspectos delicados de su trabajo-calificar a los estudiantes-que estaban siendo obligados a utilizar
DOS viejo y simple. La universidad decidió que era hora de hacer algo al respecto
esta situación y contrató a dos desarrolladores para crear una solución completamente basada en web.
Uno de ellos era (y sigue siendo) mi colega Marco Maccarini. El otro, como
de lo que has adivinado, era yo. Mario y yo de inmediato comenzaron a escribir algunos servlets Java usando Apache
JServ (que era la edad de piedra de J2EE), y tenemos el orgullo de presentar nuestra primera línea
listas con los estudiantes, cursos y grados en el otoño de 1998. Fue sólo algunas ordinaria
HTML en un navegador, pero en comparación con el cuadro de MS-DOS, que era un gran salto
adelante. Todo el mundo era entusiasta, hasta que alguien le preguntó a uno de los más cruciales
preguntas del proyecto: lo que hizo que nosotros, los desarrolladores, planean hacer con el "documento
problema" y asi fue como surgio iText

                 </p>
                 <p>
                 <b></b>
                 </p>
              </div>
           </div>
        ]]>
    </string>
    <string name="html_uno_medio_ambiente_configuracion">
        <![CDATA[
            <div>
              <div>
                <p>
                iText es una biblioteca Open Source para crear y manipular archivos PDF, RTF, y HTML en Java. Fue escrita por Bruno Lowagie, Paulo Soares, y otros; está distribuida bajo la Affero General Public License.
El mismo documento puede ser exportado en múltiples formatos, o múltiples instancias del mismo formato. Los datos pueden ser escritos a un fichero o, por ejemplo, desde un servlet a un navegador web.
Más recientemente, ha sido extendida a una biblioteca PDF de propósito general, capaz de rellenar formularios, mover páginas de un PDF a otro, y otras cosas. Estas extensiones son a menudo mutuamente excluyentes. Una clase te permite rellenar en formularios, mientras una clase diferente e incompatible hace posible copiar páginas de un PDF a otro.
El soporte de PDF de iText es, sin embargo, bastante extensivo. Esto soporta firmas basadas en PKI de PDF, cifrado de 40-bit y 128-bit, corrección de colores, PDF/X, gestión de colores por perfiles ICC, y es anfitriona de otras características.

                </p>


              </div>
           </div>
        ]]>
    </string>
    <string name="html_uno_sintaxis">
        <![CDATA[
            <div>
              <div>
                 <p>
                 Más recientemente, ha sido extendida a una biblioteca PDF de propósito general, capaz de rellenar formularios, mover páginas de un PDF a otro, y otras cosas. Estas extensiones son a menudo mutuamente excluyentes. Una clase te permite rellenar en formularios, mientras una clase diferente e incompatible hace posible copiar páginas de un PDF a otro.
El soporte de PDF de iText es, sin embargo, bastante extensivo. Esto soporta firmas basadas en PKI de PDF, cifrado de 40-bit y 128-bit, corrección de colores, PDF/X, gestión de colores por perfiles ICC, y es anfitriona de otras características.

                 <br /><br />
                <font color="#5c6bc0"><b>Añadir tablas</b></font> : Para añadir una tabla usaremos la clase PdfPTAble de iText, que se instancia pasando el número de columnas y luego sólo hay que ir añadiendo celdas con el método addCell(). Hay varios métodos addCell() también admite distintos elementos dentro, como frases, imágenes, otras tablas, etc.


                 </p>
              </div>
           </div>
        ]]>
    </string>
    <string name="juego">juego</string>
    <string name="juegoBuscaminas">Buscaminas</string>
    <string name="juegos">juegos</string>
    <string name="Cronometro">Cronometro</string>
    <string name="Calculadora">Calculadora</string>
    <string name="UTNG">UTNG</string>
    <string name="Localizacion">Localizacion</string>
    <string name="agenda">agenda</string>
    <string name="Pinteres">Pinterest</string>
    <string name="calculator">calculator</string>
    <string name="galeria">galeria</string>
</resources>